Test/dafny0/VariantAutoInit.dfy.expect
VariantAutoInit.dfy(5,17): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(32,21): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(39,22): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(64,22): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(65,22): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(66,22): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(70,27): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(71,27): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(72,27): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(78,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(79,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(80,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(84,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(85,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(86,18): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
VariantAutoInit.dfy(93,17): Error: a type parameter is not allow to specify both variance and auto-init/nonempty
16 resolution/type errors detected in VariantAutoInit.dfy
